--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta lang="cs"/>
+        <meta http-equiv="Refresh" content="0; URL=https://portfolio.explonetwork.eu/" />
     </head>
     <body>
         <h1>HELLO</h1>
